fixed vertically aligned cards and cards in team

--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,8 @@ body{
     
   }
   
+
+  .card{
+
+    justify-content: center;
+  }
